force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/Bolt_Kanban__Kanban_Setting__c.object-meta.xml
<CustomObject>
    <label>Kanban Setting</label>
    <nameField>
        <label>Kanban Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>