force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/fields/Bolt_Kanban__Card_fields__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Card_fields__c</fullName>
    <label>Card fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>