force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/fields/Bolt_Kanban__Excluded_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Excluded_Picklist_Values__c</fullName>
    <label>Excluded Picklist Values</label>
    <type>TextArea</type>
</CustomField>