force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/fields/Bolt_Kanban__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>