force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/fields/Bolt_Kanban__Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Picklist_Field__c</fullName>
    <label>Picklist Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>