force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/fields/Bolt_Kanban__Revenue_Fields__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Revenue_Fields__c</fullName>
    <label>Revenue Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>