force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/fields/Bolt_Kanban__Score_Field__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Score_Field__c</fullName>
    <label>Score Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>