force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/validationRules/Bolt_Kanban__Duplicate_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Bolt_Kanban__Duplicate_Name</fullName>
    <active>false</active>
    <errorConditionFormula>Name = VLOOKUP(
 $ObjectType.Bolt_Kanban__Kanban_Setting__c.Fields.Name ,  
 $ObjectType.Bolt_Kanban__Kanban_Setting__c.Fields.Name ,  
Name)</errorConditionFormula>
    <errorMessage>Kanban Setting is already exist with the provided Name. Kindly provide the different Name</errorMessage>
</ValidationRule>