force-app/main/default/objects/Bolt_Kanban__Kanban_Setting__c/listViews/Bolt_Kanban__All.listView-meta.xml
<ListView>
    <fullName>Bolt_Kanban__All</fullName>
    <columns>NAME</columns>
    <columns>Bolt_Kanban__Object_Name__c</columns>
    <columns>Bolt_Kanban__Card_fields__c</columns>
    <columns>Bolt_Kanban__Picklist_Field__c</columns>
    <columns>Bolt_Kanban__Revenue_Fields__c</columns>
    <columns>Bolt_Kanban__Score_Field__c</columns>
    <columns>Bolt_Kanban__Summery_Field__c</columns>
    <columns>Bolt_Kanban__Timespan_Field__c</columns>
    <columns>Bolt_Kanban__Excluded_Picklist_Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>